# simrgl

./: .gitignore  .gitmodules  AGENTS.md  COMPONENT_ANALYS.md  EXPERIMENTAL_COMPLEX.md  QUICK_TEST_GUIDE.md  README.md  SERVICES.md  START_DUAL_INDEXING.bat  START_DUAL_INDEXING.sh  lfm.yml  restore.bat.txt.txt  start_all_services.bat  start_all_services.sh  start_ollama.bat  start_ollama.sh  start_postgres.bat  start_postgres.sh  start_qdrant.bat  start_qdrant.sh  stop_all_services.bat  stop_all_services.sh  update.bat
1bcoder/: MCP.md  README.md  chat.py  headless.py  instruct.txt  map_index.py  map_query.py  map_query_help.txt  pyproject.toml  readme.txt  requirements.txt  run.bat
1bcoder/.1bcoder/: aliases.txt  map.txt  profiles.txt
1bcoder/.1bcoder/agents/: advance.txt  ask.txt  sqlite.txt
1bcoder/.1bcoder/plans/: AddFunction.txt  AskProject.txt  CheckRequirements.txt  DockerMySQL.txt  DockerNginx.txt  DockerPython.txt  DockerStack.txt  DuckDuckGoInstant.txt  EnvTemplate.txt  Explain.txt  ExploreProjectStructure.txt  GitIgnorePython.txt  MySQLDump.txt  NewScript.txt  PipFreeze.txt  PyPI.txt  Refactor.txt  RunAndFix.txt  SQLiteSchema.txt  WikiPage.txt  WikiSearch.txt  parallel_call.txt  set_ctx.txt  team-map-worker.txt  team-search-worker.txt  team-summarize.txt  team-tree-worker.txt  test.txt
1bcoder/.1bcoder/proc/: add-save.py  collect-files.py  extract-code.py  extract-files.py  (+3 more)
1bcoder/1bcoder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
1bcoder/ans/: ans1.txt  ans2.txt
1bcoder/example/: calc - Copy.py  d15.py  main.py
(+384 files in other folders)
