[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "1bcoder"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
]

[project.scripts]
1bcoder = "chat:main"

[tool.setuptools]
py-modules = ["chat", "map_index", "map_query"]
